# mumuplayer-global

./: .gitignore  PYPI.md  README.md  benchmark_screenshot_speed.py  pyproject.toml  requirements.txt
docs/: telemetry_cleanup_guide.md
mumu/: __init__.py  cleanup.py  config.py  mumu.py  utils.py
mumu/api/: __init__.py
mumu/api/adb/: Adb.py  __init__.py
mumu/api/core/: __init__.py  performance.py  window.py
mumu/api/develop/: __init__.py  androidevent.py
mumu/api/driver/: __init__.py
mumu/api/network/: Network.py  __init__.py
mumu/api/permission/: __init__.py
mumu/api/screen/: __init__.py  gui.py  nemu_sdk.py
mumu/api/setting/: __init__.py  setting.py
scripts/: mumu_cleanup.ps1
tests/: conftest.py  test_adb.py  test_android_event.py  test_app.py  test_core.py  test_gui.py  test_mumu.py  test_nemu_sdk.py  test_power_window_shortcut.py  test_root_and_bridge.py  test_setting.py  test_simulation_performance_network_screen.py  test_utils.py  test_wrappers_and_constants.py
