[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mumu-python-api-wlkjyy"
version = "1.1.0"
description = "Python API for controlling MuMu emulator through MuMuManager.exe"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "adbutils>=1.2.15,<3",
]

[project.optional-dependencies]
auto = [
  "opencv-python>=4.8",
  "scrcpy-client>=0.4.7",
]
dev = [
  "build>=1.2.2",
  "twine>=5.1.1",
  "pytest>=8.3.3",
]

[tool.setuptools.packages.find]
include = ["mumu*"]

[tool.setuptools]
include-package-data = false
